# rust-boot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml
docs/: book.toml
docs/src/: SUMMARY.md  faq.md  introduction.md
docs/src/architecture/: crate-structure.md  overview.md  plugin-lifecycle.md  request-flow.md
docs/src/axum-integration/: handlers.md  overview.md  router.md
docs/src/core/: configuration.md  error-handling.md  overview.md  repository.md  service.md
docs/src/getting-started/: installation.md  overview.md  quick-start.md
docs/src/guides/: basic-api-tutorial.md  custom-plugin-tutorial.md  database-setup.md  overview.md
docs/src/plugins/: authentication.md  caching.md  custom-plugins.md  events.md  monitoring.md  overview.md
docs/src/reference/: api-reference.md  cli.md  crud-model-macro.md  overview.md
docs/theme/: custom.css
rust-boot/: Cargo.toml
rust-boot-axum/: Cargo.toml
rust-boot-axum/src/: handlers.rs  lib.rs  router.rs
rust-boot-cli/: Cargo.toml
rust-boot-cli/src/: main.rs
rust-boot-cli/src/commands/: generate.rs  mod.rs  new.rs
rust-boot-cli/src/templates/: mod.rs  project.rs
rust-boot-core/: Cargo.toml
rust-boot-core/src/: config.rs  error.rs  lib.rs  plugin.rs  registry.rs  repository.rs  service.rs
rust-boot-macros/: Cargo.toml
rust-boot-macros/src/: ir.rs  lib.rs  parse.rs
rust-boot-plugins/: Cargo.toml
rust-boot-plugins/src/: lib.rs
rust-boot-plugins/src/auth/: claims.rs  jwt.rs  mod.rs
rust-boot-plugins/src/cache/: mod.rs  moka_backend.rs  redis_backend.rs
rust-boot-plugins/src/events/: event.rs  mod.rs  store.rs
rust-boot-plugins/src/monitoring/: health.rs  metrics.rs  mod.rs
rust-boot/examples/: basic_api.rs  custom_plugin.rs
rust-boot/src/: lib.rs
rust-boot/tests/: integration_test.rs
