[workspace]
members = [
    "rust-boot-core",
    "rust-boot-macros",
    "rust-boot-axum",
    "rust-boot-plugins",
    "rust-boot-cli",
    "rust-boot",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["rust-boot contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rust-boot"
homepage = "https://github.com/yourusername/rust-boot"
documentation = "https://docs.rs/rust-boot"
keywords = ["framework", "crud", "rest", "derive", "plugin"]
categories = ["web-programming"]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# For core
config = "0.13"
once_cell = "1.19"
toml = "0.8"
serde_yaml = "0.9"

# For macros
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"

# For axum
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
utoipa = { version = "4.0", features = ["uuid"] }

# For plugins
moka = { version = "0.12", features = ["future"] }
redis = { version = "0.24", features = ["aio", "tokio-comp"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
jsonwebtoken = "9.2"
regex = "1.10"

# For CLI
clap = { version = "4.4", features = ["derive"] }
tera = "1.19"
anyhow = "1.0"

# Database
sea-orm = { version = "0.12", features = ["sqlx-postgres", "sqlx-sqlite", "sqlx-mysql", "uuid", "chrono"] }

# Testing & Development
tokio-test = "0.4"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow some pedantic/cargo lints that are too strict
type_complexity = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
similar_names = "allow"
needless_continue = "allow"
match_wildcard_for_single_variants = "allow"
ref_option = "allow"
items_after_statements = "allow"
struct_excessive_bools = "allow"
unnecessary_wraps = "allow"
cast_possible_truncation = "allow"
used_underscore_binding = "allow"
needless_pass_by_value = "allow"
unnecessary_literal_unwrap = "allow"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
