[package]
name = "rust-boot-axum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Axum integration with routers, handlers, and middleware for rust-boot framework"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid.workspace = true
utoipa.workspace = true
rust-boot-core = { path = "../rust-boot-core" }

[lints]
workspace = true
