[package]
name = "rust-boot-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI scaffolding tool for generating rust-boot projects"

[[bin]]
name = "rust-boot"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
clap.workspace = true
tera.workspace = true
anyhow.workspace = true
tracing.workspace = true

[lints]
workspace = true
