[package]
name = "rust-boot-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core traits, plugin system, shared types, and error handling for rust-boot framework"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
config.workspace = true
once_cell.workspace = true
toml.workspace = true
serde_yaml.workspace = true

[lints]
workspace = true
