[package]
name = "rust-boot-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Procedural macros for rust-boot framework"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote.workspace = true
proc-macro2.workspace = true
darling.workspace = true

[lints]
workspace = true
