[package]
name = "rust-boot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rapid CRUD API framework inspired by Spring Boot"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
axum.workspace = true
uuid.workspace = true

rust-boot-core = { path = "../rust-boot-core" }
rust-boot-axum = { path = "../rust-boot-axum" }
rust-boot-plugins = { path = "../rust-boot-plugins" }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[[example]]
name = "basic_api"
path = "examples/basic_api.rs"

[[example]]
name = "custom_plugin"
path = "examples/custom_plugin.rs"

[lints]
workspace = true
